Dear Emacs, please make this -*-Text-*- mode!

NEWS for gWidgetsWWW

Changes for 0.0-22
-------------------
* moved js code from widgets into standalong file. Compressed by compress.R
* internal change to how handlers are evaluated. Trying to cut down on
SIGPIPE error
* bug fixes
* fixed some of the examples


Changes for 0.0-21
-------------------
* fixes to work with R-studio under local server
* bug fix for gdf

Changes for  0.0-20
-------------------
* deprecate ggooglemaps for a bit
* added gwebvis -- but doesn't work! (placement of object needs
  addressing)
* removed gcodemirror -- didn't work
 
Changes for  0.0-19
-------------------
* debug removal take II -- r-forge mistake?

Changes for  0.0-18
--------------------
* removed debugging file that hung windows

Changes for  0.0-17
--------------------
* no change, seemed to have forgotten to upload version 16

Changes for  0.0-16
--------------------
* Changed to use the dynamic help's httpd server -- not the Tcl one
  from Rpad. This is much better as the Tcl one had size limitations
  and meant an additional web server.
* New widget gcommandline. For local use only!
* new widget gfile. (More like gfilebrowse). For local use only.
* new demo for local use: ex-simple-gui.R. Call with localServerStart
  to see.
* fixes to gtable.
* numerous minor bug fixes, doc fixes

Changes for  0.0-15
--------------------
* added tag, tag<- methods to make work with gWidgets code
* added stub isExtant method
* added blockHandler, unblockHandler methods
* fixed bug with gtable
* Try to integrate with traitr, but only partially successful.

Changes for  0.0-14
--------------------
* doc fix to make vignette with TeXLive

Changes for  0.0-13
--------------------

* added message when loading javascript files

* noted issue -- still to be fixed -- with local pages that are too
  big.

* fixed bug with local server -- was calling non-existent package

Changes for  0.0-12
--------------------
* fix to localServerStart
