@@ -1,25 +1,35 @@
+## An illustration of how gimage can be used for a graphics
+## needs a png driver
+
 ## need w to be global!
 w <- gwindow("")
+
+##' make an error page if any issues
+##' @param msg a message for the error
 makeErrorPage <- function(msg="") {
   svalue(w) <- "Error"
   ghtml(sprintf("Error: %s", msg), cont=w)
 }
 
+## sanity checks
 if(!capabilities()['png']) {
   makeErrorPage("This demo needs a png driver to work")
 } else if(!require(lattice, quietly=TRUE, warn=FALSE)) {
   makeErrorPage("This demo uses the lattice package")
 } else {
-  
+
+  ## function to draw graphic
   makePlot <- function(fileName, width, height) {
     library(lattice)
+    width <- 500; height <- 300
     png(file=fileName, width=width, height=height)
     print(histogram(rnorm(100)))
     dev.off()
   }
-  
+
+  ## static file for writing to / reading from
   fileName <- getStaticTmpFile(ext=".png")
-  width <- 500; height <- 300
+
   
   
   svalue(w) <- "Using Cairo plus gimage"
@@ -37,4 +47,5 @@ if(!capabilities()['png']) {
   
   gstatusbar("Powered by RApache and gWidgetsWWW", cont = w)
 }
-  visible(w) <- TRUE
+
+visible(w) <- TRUE
